--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <canvas id="gameWorld" width="400" height="400" style="background: rgb(120, 130, 192); border: 1px solid black" tabindex="1"></canvas>
-    <h1>Watch it run! </h1>
+    <h1>Watch it run! Use w, a, s, d keys to run!</h1>
 </body>
 </html>
